# projeto_b2bflow

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py
tests/: test_main.py
