[project]
name = "projeto-b2bflow"
version = "0.1.0"
description = ""
authors = [
    {name = "hiuri selzler"}
]
requires-python = ">=3.13"
dependencies = [
    "supabase (>=2.31.0,<3.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)"
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | .mypy_cache
)/
'''